--- a/ansible/roles/cje/templates/node-cd.xml
+++ b/ansible/roles/cje/templates/node-cd.xml
@@ -1,15 +1,15 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <slave>
-    <name>{{ item.node_name }}</name>
+    <name>node-cd</name>
     <description></description>
     <remoteFS>/data/jenkins_slave</remoteFS>
     <numExecutors>3</numExecutors>
     <mode>NORMAL</mode>
     <retentionStrategy class="hudson.slaves.RetentionStrategy$Always"/>
     <launcher class="hudson.plugins.sshslaves.SSHLauncher" plugin="ssh-slaves@1.10">
-        <host>{{ item.ip }}</host>
+        <host>{{ ansible_all_ipv4_addresses[0] }}</host>
         <port>22</port>
-        <credentialsId>691e19c2-e18f-45a4-96d5-7b8eea1dbd43</credentialsId>
+        <credentialsId>87f4552e-f98b-4963-99af-89b26d9e2304</credentialsId>
         <maxNumRetries>0</maxNumRetries>
         <retryWaitTime>0</retryWaitTime>
     </launcher>
