--- a/ansible/roles/cje/templates/node-production.xml
+++ b/ansible/roles/cje/templates/node-production.xml
@@ -2,7 +2,7 @@
 <slave>
     <name>{{ item.node_name }}</name>
     <description></description>
-    <remoteFS>/data/jenkins_slave</remoteFS>
+    <remoteFS>/mnt/jenkins_slave</remoteFS>
     <numExecutors>3</numExecutors>
     <mode>NORMAL</mode>
     <retentionStrategy class="hudson.slaves.RetentionStrategy$Always"/>
