--- a/ansible/roles/cje/templates/config.xml
+++ b/ansible/roles/cje/templates/config.xml
@@ -5,7 +5,7 @@
     <numExecutors>2</numExecutors>
     <mode>NORMAL</mode>
     <useSecurity>true</useSecurity>
-    <authorizationStrategy class="hudson.security.AuthorizationStrategy$Unsecured"/>
+    <authorizationStrategy class="hudson.security.FullControlOnceLoggedInAuthorizationStrategy"/>
     <securityRealm class="org.jenkinsci.plugins.mocksecurityrealm.MockSecurityRealm" plugin="mock-security-realm@1.3">
         <data>admin
 developer
