Add vagrant private key

--- a/ansible/roles/cje/templates/credentials.xml
+++ b/ansible/roles/cje/templates/credentials.xml
@@ -1,44 +1,81 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<com.cloudbees.plugins.credentials.SystemCredentialsProvider plugin="credentials@1.24">
-    <domainCredentialsMap class="hudson.util.CopyOnWriteMap$Hash">
-        <entry>
-            <com.cloudbees.plugins.credentials.domains.Domain>
-                <specifications/>
-            </com.cloudbees.plugins.credentials.domains.Domain>
-            <java.util.concurrent.CopyOnWriteArrayList>
-                <com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey plugin="ssh-credentials@1.11">
-                    <scope>GLOBAL</scope>
-                    <id>87f4552e-f98b-4963-99af-89b26d9e2304</id>
-                    <description></description>
-                    <username>ubuntu</username>
-                    <passphrase>N9vP1l7+a5h8hNbpWgYflQ==</passphrase>
-                    <privateKeySource class="com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey$DirectEntryPrivateKeySource">
-                        <privateKey>-----BEGIN RSA PRIVATE KEY-----
-                            MIIEpAIBAAKCAQEAlFOkhlaABkGgjgvD6uDyVxM7kTv9AM/dgDKG7Ywnn6Y8NI2xzHRgT7xQAAwA
-                            iKy58wH3qZT20cez2Bq2DUOYC9wqUSK1gwkyEmvvMGEVKMlc1LUP+Q2I4lxbBN/mVziZhLt2nun+
-                            sl1VPE58UHyD3bSCzj8cEv8aBpY9ZH9XyjRcgce/3oF3RaBQaph03FsA5WNLbzEupDK4qRmzHjek
-                            FWxg+PhgQ6amiMJ3yXvjqH+9zEAs1V+vsoW7dYUNjXx0mfKvtE2GTHYAABqiUmja+DHO6K6uona1
-                            oyCHT2XtDa+BY0pA+4s/NKIFXgWdHkaamwByHBfVwVMYYAeKXgQvSwIDAQABAoIBAAKOtqWCVE7H
-                            TudkGIqyOjt6H2rPp/sdmmoddOofoodELIGTd99YmliFnLODgXbZ05L3E7ge02qmkNlHDKCJ69M4
-                            hppDiPGrdOuQZN1mryC26Bzayl22+Ac/JGqfGa+jUDJTsSXoTvXwWgniKI6StwtZk2/O8sL5Fw/K
-                            A2D6OR9JZQc/81WlvgztPbJD2hwOTd99ajnS0oUcxHg+D5JKUZaivOFDQIYb4VTzfA04vbgwJWUd
-                            +rP+9yiGkYk41OLCKIqI+1SITjAvDD0hqFdeacP07Iju1DlX/lyuzPCbecf52XNLLRTZ9jO0jbsd
-                            8z5CgZUxP1/cB1xy3YAuD1nSLRECgYEA5cWwU+wEsR83VcoEpKZygy8hSqgp1q5ogezlp6Jd64Hq
-                            E/DoOipvLMYE3Clu9NBKNvAFXTjfwbKidI4YR5nSGPVLldhXDubqwZYuJDuTq18arZnqMtaXdGh2
-                            6ty2+2rsOA6n3z9pMikRNczGrHz0lVmbPO91EmWxZwajXhfr8WcCgYEApUH8jnlENI3gdJ9SB4Jj
-                            S+r6emFMIvZniIRaJa8TSrXe163d50NDYgLlQNiCEm3C/NUfNnhTt75AJeAXkQhFedf1+HCpRs3t
-                            7FzOtSJxP19kC5doPiLRRoNZC5dKRK1EjJVJCV/q/M8h7f/ftToSK2JIiL8fFp6jhEF6ByWUMH0C
-                            gYEAh3JuzDngVi0pqHfLHuhDrtNUk7bn2va7AoQMqTIMnWza+OBVdRxYpxMgAEyobMZwSUxaTSbe
-                            uEc+fujYpTSm5jGLWgzK3S0AjBekoZVBKo+IoXeO2GMpquR93Vs4vqK8FxuEmBTARWJyE73gDAQp
-                            BfVpjpU19R9fYXVHTotZedcCgYAYjszEM1siYC8JxZ9ABG1TG9ErHIhe7bUHAXwP+4tnX82EyY6f
-                            TkyWJQ4Ca+owaOVAAz/HLWxrcrc/qaR25f7FE4W27K8LGZEQvd3t5vdjTn6khlR0X2IwE1bJNStR
-                            N1pndcvLu9hEx1cocgzBdqa6kblrsNMi3mI4Ri6nHzt9VQKBgQCfpig2xk7Yq6NphlVrKrkVT2Sh
-                            BJXiEV/5WwxUvAZmh5/i1pKLE+k0mkfO6IPtrRMrORm5Povc944P2MP3sVaZmPVkke4Uxv26IIH2
-                            MaUQ0/FQqrJgg9xuxb+UjTrA7msr2eXshEbdI5zrqGyoRTMtICUVmSjo/0YogSnc8XwfNw==
-                            -----END RSA PRIVATE KEY-----</privateKey>
-                    </privateKeySource>
-                </com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey>
-            </java.util.concurrent.CopyOnWriteArrayList>
-        </entry>
-    </domainCredentialsMap>
-</com.cloudbees.plugins.credentials.SystemCredentialsProvider>
+<com.cloudbees.plugins.credentials.SystemCredentialsProvider plugin="credentials@1.25">
+  <domainCredentialsMap class="hudson.util.CopyOnWriteMap$Hash">
+    <entry>
+      <com.cloudbees.plugins.credentials.domains.Domain>
+        <specifications/>
+      </com.cloudbees.plugins.credentials.domains.Domain>
+      <java.util.concurrent.CopyOnWriteArrayList>
+        <com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey plugin="ssh-credentials@1.11">
+          <scope>GLOBAL</scope>
+          <id>87f4552e-f98b-4963-99af-89b26d9e2304</id>
+          <description></description>
+          <username>ubuntu</username>
+          <passphrase>0hl5Nq0oKc5WkBCHjTwv4xokzGBRZ4ClLazNpIJ4DPJ1XAm5SPeRCWGr6Uq0SUuP</passphrase>
+          <privateKeySource class="com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey$DirectEntryPrivateKeySource">
+            <privateKey>-----BEGIN RSA PRIVATE KEY-----
+MIIEpAIBAAKCAQEAlFOkhlaABkGgjgvD6uDyVxM7kTv9AM/dgDKG7Ywnn6Y8NI2xzHRgT7xQAAwA
+iKy58wH3qZT20cez2Bq2DUOYC9wqUSK1gwkyEmvvMGEVKMlc1LUP+Q2I4lxbBN/mVziZhLt2nun+
+sl1VPE58UHyD3bSCzj8cEv8aBpY9ZH9XyjRcgce/3oF3RaBQaph03FsA5WNLbzEupDK4qRmzHjek
+FWxg+PhgQ6amiMJ3yXvjqH+9zEAs1V+vsoW7dYUNjXx0mfKvtE2GTHYAABqiUmja+DHO6K6uona1
+oyCHT2XtDa+BY0pA+4s/NKIFXgWdHkaamwByHBfVwVMYYAeKXgQvSwIDAQABAoIBAAKOtqWCVE7H
+TudkGIqyOjt6H2rPp/sdmmoddOofoodELIGTd99YmliFnLODgXbZ05L3E7ge02qmkNlHDKCJ69M4
+hppDiPGrdOuQZN1mryC26Bzayl22+Ac/JGqfGa+jUDJTsSXoTvXwWgniKI6StwtZk2/O8sL5Fw/K
+A2D6OR9JZQc/81WlvgztPbJD2hwOTd99ajnS0oUcxHg+D5JKUZaivOFDQIYb4VTzfA04vbgwJWUd
++rP+9yiGkYk41OLCKIqI+1SITjAvDD0hqFdeacP07Iju1DlX/lyuzPCbecf52XNLLRTZ9jO0jbsd
+8z5CgZUxP1/cB1xy3YAuD1nSLRECgYEA5cWwU+wEsR83VcoEpKZygy8hSqgp1q5ogezlp6Jd64Hq
+E/DoOipvLMYE3Clu9NBKNvAFXTjfwbKidI4YR5nSGPVLldhXDubqwZYuJDuTq18arZnqMtaXdGh2
+6ty2+2rsOA6n3z9pMikRNczGrHz0lVmbPO91EmWxZwajXhfr8WcCgYEApUH8jnlENI3gdJ9SB4Jj
+S+r6emFMIvZniIRaJa8TSrXe163d50NDYgLlQNiCEm3C/NUfNnhTt75AJeAXkQhFedf1+HCpRs3t
+7FzOtSJxP19kC5doPiLRRoNZC5dKRK1EjJVJCV/q/M8h7f/ftToSK2JIiL8fFp6jhEF6ByWUMH0C
+gYEAh3JuzDngVi0pqHfLHuhDrtNUk7bn2va7AoQMqTIMnWza+OBVdRxYpxMgAEyobMZwSUxaTSbe
+uEc+fujYpTSm5jGLWgzK3S0AjBekoZVBKo+IoXeO2GMpquR93Vs4vqK8FxuEmBTARWJyE73gDAQp
+BfVpjpU19R9fYXVHTotZedcCgYAYjszEM1siYC8JxZ9ABG1TG9ErHIhe7bUHAXwP+4tnX82EyY6f
+TkyWJQ4Ca+owaOVAAz/HLWxrcrc/qaR25f7FE4W27K8LGZEQvd3t5vdjTn6khlR0X2IwE1bJNStR
+N1pndcvLu9hEx1cocgzBdqa6kblrsNMi3mI4Ri6nHzt9VQKBgQCfpig2xk7Yq6NphlVrKrkVT2Sh
+BJXiEV/5WwxUvAZmh5/i1pKLE+k0mkfO6IPtrRMrORm5Povc944P2MP3sVaZmPVkke4Uxv26IIH2
+MaUQ0/FQqrJgg9xuxb+UjTrA7msr2eXshEbdI5zrqGyoRTMtICUVmSjo/0YogSnc8XwfNw==
+-----END RSA PRIVATE KEY-----</privateKey>
+          </privateKeySource>
+        </com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey>
+        <com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey plugin="ssh-credentials@1.11">
+          <scope>GLOBAL</scope>
+          <id>e22491c8-301c-4e6a-9d41-8c9bf435c361</id>
+          <description>vagrant ssh key</description>
+          <username>vagrant</username>
+          <passphrase>SfjaiLdlS1FvoNtpLjLNuQ==</passphrase>
+          <privateKeySource class="com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey$DirectEntryPrivateKeySource">
+            <privateKey>-----BEGIN RSA PRIVATE KEY-----
+MIIEpQIBAAKCAQEA6TjztdqCikV22xWnSb9HwKbIA1g7otaboTJmCv/5y+3r1e3n
+soRZRQVnBDzHPMauv8DRC5EUn9Yc1tlgQ0xJReSZei2XhbGgBMPEocSWL96Hu5Ca
+QcbKgQEYHKWDAws+nIKcmslcUfvC1aAfX1bhZOLZ3PJgIbTKRMo+kj+pArVb8LUg
+tr7FMRi7fmbKgMlqUK05wpdCepdmuO3Upkdn4oWzMOFDpP286u4pJxTC1t/Yd2lg
+mbT0Viq8B14A6Q8ZFsdo9bQ5WGpFU7FBtqsCF2C8nCyopsxnyjsrlEDzlHX+ymFl
+AvkwFzQ9SXx6tXPK/lkpOHHmHRgXIKPLB/M5iwIDAQABAoIBAHFmScnwt2x4HjSk
+sLTBFyhrb/GAY27oHsAge1F56YHo67UXeoNoqudOmyqKSu4YRTvji0Guh3K4b0lg
+ZNgULcSYRLANnxFYrs/iSKfHqKcZ8rGWvAqjmC9l0s2LBMrkGsuLDo6MviD242Nv
++hEnc2zUiM5P48I/3+HW3NnLrmgrzPDQecVDhFAcm21MUEmT68eYoeDdDlWD9r2U
+pvC4uRyThyDJaZC5Vi9u7lyxcFwEkgLgjVDmBsJvyh4zP8RtRClRUV2q/I/TtB/l
+mdodGbzTn36Whi66i6Z9OpKCQX19B0t+r+5cc8Ty8kvA2DWFV9S+yBdx2Xr90nOC
+CkLQztECgYEA/1tiSd6f+Zs91QjR3UpNdd2FkrLGMQ/t4c5Wthfdvx0zCNz1GjPR
+uXF0+YhsRhzTewcVVrqtXJ+Gni33imTmCIcM6SGyw8mk6thf161A8kHD0IVxrn1Z
+twd/VfDFEmyb/DjrFpPDYMWFQLPaw/Qmm4oaXV/X/u8uyBt9QArzP/cCgYEA6c9M
+jV7h3xwvrMdNUWzi5zK848SdQetPff66PP4ltkn8Pec9M9IIyWrPoS+y+H9Uu1cl
+dTy5J6gQSwvrvcb51pYD10pe20HOdseHACfaqZ1uStoXoYpwuir0gukIUtmNM772
+/m1PqTp159oiJ/I2wrngP+oRGUlT50uNrj/EVg0CgYEAixDOf2JBhyMXUmyCNlyf
+wL/KXbEEpHWDXIUNzg9DUTBqubnztbhgz/hM9xRnuus59PdPlLMHdLjgDEcGV5VJ
+fX1m95PFkkC/krIRyBhvlT9hj68M0TUs5bOskjYUbUs+y+aHiP0h2xLW1fzc9/iA
+Chb08sMek5TYylvGI1mTTdMCgYEA3AKiMWE4P/7A6d985QMGHLJExjtMEyx+17ur
+uhsYl4jVH9cJY0rf09B7YlyFF4qRy9t8Nu6V+DgQZN3pzeF/VSpCoQKtcbphsqmc
+YkweWX73ut2wYOTpoHUtMkZf+74VPb0TpGRuEnsdWbeMbnRgjSnlV59EybuThVE2
+F+KPOL0CgYEAld1wy5N10A0YMD4fMYpbIaeTEI77Ip9g0jAeN8Q0Fa/Ayd1ZM0Aw
+B/EVCbhXkbGKxGM3JqnDQbGBlaUm0Qz8hKR35jgTU0/M+OaUEHSHIppQ3y+2nyHQ
+LV7x5/4A4H+v1ThPbkass1IBqr53UiOXhhRCCy8RxjZOsuVKWx+dxlY=
+-----END RSA PRIVATE KEY-----
+</privateKey>
+          </privateKeySource>
+        </com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey>
+      </java.util.concurrent.CopyOnWriteArrayList>
+    </entry>
+  </domainCredentialsMap>
+</com.cloudbees.plugins.credentials.SystemCredentialsProvider>>
